--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-main {
+  width: 20%;
+  height: 60%;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.photo {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0px;
+}
+
+.photo img {
+  width: 100%;
+  border-radius: 40px;
+}
